@OR-1196: Fix incorrect cursor being used on small menu items

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -92,7 +92,6 @@ hr.rule-bold {
 }
 
 .menu .menu-item-small {
-  cursor: pointer;
   white-space: normal;
   display: table-cell;
   padding: 10px 20px;
